tools/tests/errors/pow_negative_exp_mod.ki
discard pow(2, -1, 5)
